<resources>
    <string name="app_name">Jaipur Tourism</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jaipur Tourism</string>
    <string name="nav_header_subtitle">An unique app to guide you</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="home_detail">Jaipur is Rajasthan’s biggest city and its capital. It is known (somewhat incorrectly) as the Pink City due to the distinct color of its buildings. The ‘pink’ of the Pink City is Gerua (or ochre) in which the city was coated during the visit of the Prince of Wales in 1905-06. Jaipur is known as much for its fascinating monuments and colorful markets as it is for its gorgeous handloom garments and wonderfully laid-out gardens. It is really not very difficult to fall in love with Jaipur the moment you land here. Along with Delhi and Agra, Jaipur forms the Golden Triangle of Indian tourism. Not only does it attract domestic travelers, Jaipur is often an important stopover for foreign tourists.</string>
    <string name="image_desc">image</string>
    <string name="history_label">History</string>
    <string name="jaipur_history">The city of Jaipur gets its name from its founder, Jai Singh II. Unlike several other kings and emperors of his time, Jai Singh II was as keen an astronomer as he was a great warrior. He ascended the throne at the tender age of 11 after his father Bishan Singh passed away. Hailing from the Kucchwaha Rajput clan, Jai Singh carried on his ancestral alliance with the Mughals, in line with the Kucchwaha Rajput policy of diplomacy over war. This isn’t to say that Jai Singh’s alliance with the Mughals was always a happy one. As with all alliances, this one too had its share of ups and downs but the lowest point came after the death of Aurangzeb who once favored Jai Singh and had also given him the title Sawai. When time came, Jai Singh II allied himself with Azam Shah and his son Bidar Bakht, who lost the succession battle and Jai Singh found himself alienated in the Mughal court. Bahadur Shah succeeded Aurangzeb and demanded that Jai Singh II be removed from the throne of Jaipur. Not the one to take setbacks lying down, Jai Singh II allied himself with two other Rajput states. He married the princess of Mewar and won the trust of the Marwar king and together they expelled the Mughals from Rajputana. Jai Singh earned his place at the table once again and was appointed to govern important Mughal provinces.</string>
    <string name="home">Home</string>
    <string name="cultural_places">Cultural Places</string>
    <string name="historical_places">Historical Places</string>
    <string name="palaces">Palaces</string>
    <string name="temples">Temples</string>
    <string name="birla_mandir">Birla Mandir</string>
    <string name="nahargarh_fort">Nahargarh Fort</string>
    <string name="jaigarh_fort">Jaigarh Fort</string>
    <string name="amber_fort">Amber Fort</string>
    <string name="city_palace">City Palace</string>
    <string name="jantar_mantar">Jantar Mantar</string>
    <string name="hawa_mahal">Hawa Mahal</string>
    <string name="jal_mahal">Jal Mahal</string>
    <string name="albert_hall">Albert Hall</string>
    <string name="rambagh_place">Rambagh Palace</string>
    <string name="fort">Forts</string>
    <string name="museum">Museums</string>

    <string name="cultural">Cultural</string>
    <string name="historical">Historical</string>
    <string name="tamples">Temples</string>
    <string name="forts">Forts</string>
    <string name="palace">Palace</string>
    <string name="museums">Museums</string>

    <string name="opening_hours">Opening hours</string>

    <string name="amber_fort_description">Renowned for its combination of Hindu and Mughal architecture, the Amber Fort is located about 11 km from Jaipur in Rajasthan. The citadel was the seat of the Kachhawa Rajputs who ruled Amer in Rajasthan before the capital was moved to the present day Jaipur. The construction of the fort was commenced in 1592 by Raja Man Singh I over the remnants of an earlier fortified structure. The fort was built with red sandstone. It was modified by successive rulers for 150 next years.</string>
    <string name="amber_fort_hours">Open all days 08:00 am to 05:30 pm.\nClosed on Holi</string>
    <string name="rambhag_description">The Jewel of Jaipur, Rambagh Palace truly lives up to this name as it is one of the most beautiful palaces in India. Once the residence of the Maharaja of Jaipur, the palace has now been converted into a lavish hotel. The most expensive hotel in Jaipur, it is a favorite with international celebrities and considered by many as one of the best hotels on the planet. Originally built as a garden house in 1835 for Ram Singh II’s wet nurse, Kesar Badaran, the palace and landscaped gardens are spread over 47 acres.</string>
    <string name="rambagh_hours">Open all days</string>
    <string name="birla_mandir_description">Located at the foot of Moti Dungri fort in Jaipur, the Birla temple is one of the several Birla mandirs located all around the country. The temple is sometimes also referred to as the Laxmi Narayan Temple.</string>
    <string name="birla_mandir_hours">Open all days 05:00 am to 09:00 pm</string>
    <string name="nahargarh_fort_description">Forming an impressive backdrop of Jaipur is the humongous Nahargarh fort. It was built by Jai Singh for the protection of Amer in 1734 and extended in 1868.The fort is located on the Aravali Hills. Legend has it that it was named Nahargarh after Nahar Singh, a prince whose spirit would destroy the construction and stall its progress.</string>
    <string name="nahargarh_fort_hours">Open all days 10:00 am to 05:30 pm</string>
    <string name="jaigarh_fort_description">The Jaigarh Fort is the most imposing and spectacular fort that overlooks Jaipur. It is famous for the Jaivana canon, considered the largest canon in the world. The fort was built by Sawai Jai Singh II in 1726 to protect the Amer fort. The fort named after its builder, is also known as the fort of victory because it has never been conquered.</string>
    <string name="jaigarh_fort_hours">Open all days 09:00 am to 04:30 pm</string>
    <string name="city_palace_description">Built in 1729-1732 AD, the City Palace in Jaipur was where the Maharaja of Jaipur reigned from. The Palace complex also includes the famous ‘Chandra Mahal’ and ‘Mubarak Mahal’. The famous gates to the Palace – the ‘Udai Pol’, ‘Jaleb Chowk’, ‘Tripolia Gate’ and ‘Virendra Pol’ – reflect Rajput, Mughal and European architectural styles.</string>
    <string name="city_palace_hours">Open all days 09:30 am to 05:00 pm</string>
    <string name="jantar_mantar_description">A visit to Jaipur is incomplete without a visit to the historic Jantar Mantar. It is one of the five observatories built by Sawai Jai Singh in 1718. It houses a huge collection of astronomical instruments and the world’s biggest sundial. Jantar Mantar is a UNESCO World Heritage site and is a must-visit for all history lovers.</string>
    <string name="jantar_mantar_hours">Open all days 09:30 am to 05:00 pm</string>
    <string name="hawa_mahal_description">Hawa Mahal or the Palace of winds was built by Sawai Pratap Singh in 1747. It has latticed windows that allowed royal ladies to have view of the market place. From the top one can have a view of Jantar Mantar  and the City Palace on one side and the Siredeori bazaar on the other side. Jaipur is very much synonymous with Hawa Mahal.</string>
    <string name="hawa_mahal_hours">Open all days 09:00 am to 04:30 pm</string>
    <string name="jal_mahal_description">Located in the heart of the Man Sagar lake is the magnificent Jal Mahal, one of Jaipur‘s prime tourist attractions. The palace appears to float on the waters of the lake, hence the name Jal Mahal (Water Palace). The lake was created in the 16th Century by constructing a dam to conserve water. The palace, built in 1799 by Maharaja Madho Singh I, was modeled on a similar palace, the Lake Palace located in Udaipur.</string>
    <string name="jal_mahal_hours">Open all days</string>
    <string name="albert_hall_description">Albert Hall Museum is one of the oldest museums in Rajasthan. Located amidst Ram Niwas Garden in Jaipur, the Albert Hall Museum houses a collection of rare paintings, exquisite jewelry, chiseled brass-ware, pottery and natural stones, ivory goods, metal sculptures and crystal works.</string>
    <string name="albert_hall_hours">Tuesday to Sunday 09:00 am to 05:00 pm and 07:00 pm to 10:00 pm</string>
</resources>