<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical"
        tools:context=".fragment.HomeFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/image_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:scaleType="centerCrop"
            android:src="@drawable/hawa_mahal" />

        <TextView
            android:id="@+id/home_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_margin_top"
            android:text="@string/home_detail"
            android:textSize="@dimen/font_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_margin_top"
            android:text="@string/history_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/label_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_margin_top"
            android:text="@string/jaipur_history"
            android:textSize="@dimen/font_size" />

    </LinearLayout>
</ScrollView>